[gd_scene load_steps=12 format=3 uid="uid://csabx30vayl1v"]

[ext_resource type="Texture2D" uid="uid://bw8i1gvs8xlmm" path="res://bgs/candy.jpg" id="1_3s3h3"]
[ext_resource type="Texture2D" uid="uid://chap8x8jyfya2" path="res://texturas/1920x1080.jpg" id="1_dlimb"]
[ext_resource type="Script" path="res://scenes/generate_star.gd" id="2_vvrgc"]
[ext_resource type="Script" path="res://scenes/VoltarMenu.gd" id="2_wberv"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="3_23vl8"]
[ext_resource type="Texture2D" uid="uid://djdckc6y6rw7m" path="res://texturas/shipGreen_manned.png" id="4_tykpv"]
[ext_resource type="Script" path="res://addons/virtual_joystick/test/player.gd" id="5_44apo"]
[ext_resource type="AudioStream" uid="uid://0u2wsrm6l6jf" path="res://texturas/cards-pack-open-1.ogg" id="8_81hrx"]
[ext_resource type="AudioStream" uid="uid://dciihsmrv4fwb" path="res://texturas/chips-stack-1.ogg" id="9_5cgaj"]
[ext_resource type="AudioStream" uid="uid://dw5rbvvcvdoum" path="res://texturas/The Verdant Grove.ogg" id="10_brx8o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r024g"]
radius = 72.111

[node name="Candy" type="Node"]

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(964, 544)
scale = Vector2(1.01048, 1.02222)
texture = ExtResource("1_dlimb")
script = ExtResource("2_vvrgc")
spawn_region = Rect2(-300, -300, 1200, 700)

[node name="VoltarMenu" type="Button" parent="."]
offset_left = 38.0
offset_top = 23.0
offset_right = 468.0
offset_bottom = 98.0
theme_override_font_sizes/font_size = 48
text = "VOLTAR AO MENU"
script = ExtResource("2_wberv")

[node name="Candy" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 544)
scale = Vector2(1.4875, 1.48889)
texture = ExtResource("1_3s3h3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Virtual joystick left" parent="UI" instance=ExtResource("3_23vl8")]

[node name="Virtual joystick right" parent="UI" instance=ExtResource("3_23vl8")]
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = -300.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
joystick_mode = 1
use_input_actions = false

[node name="Player" type="Area2D" parent="." node_paths=PackedStringArray("joystick_left", "joystick_right")]
position = Vector2(600, 300)
collision_mask = 3
script = ExtResource("5_44apo")
joystick_left = NodePath("../UI/Virtual joystick left")
joystick_right = NodePath("../UI/Virtual joystick right")

[node name="Player" type="Sprite2D" parent="Player"]
texture = ExtResource("4_tykpv")

[node name="Player2" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_r024g")

[node name="Score" type="Label" parent="."]
offset_left = 1624.0
offset_top = 40.0
offset_right = 1872.0
offset_bottom = 136.0
theme_override_font_sizes/font_size = 55
text = "55"

[node name="AudioEstrela" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_81hrx")

[node name="AudioPegarEstrela" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_5cgaj")

[node name="AudioTrilhaSonora" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_brx8o")
autoplay = true

[connection signal="pressed" from="VoltarMenu" to="VoltarMenu" method="_on_pressed_voltar_menu"]
[connection signal="area_entered" from="Player" to="Player" method="_on_area_entered"]
